Added Exit Codes and Improved Shutdown Command